--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue-sortable": "^0.1.3",
+    "vuedraggable": "^2.23.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
