--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.4",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
     "vue": "^2.6.11",
+    "vue-html2canvas": "0.0.4",
     "vue-router": "^3.1.5",
     "vue-sortable": "^0.1.3",
     "vuedraggable": "^2.23.2",
