--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.0",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "vue": "^2.6.11",
@@ -16,6 +17,7 @@
     "vue-router": "^3.1.5",
     "vue-sortable": "^0.1.3",
     "vuedraggable": "^2.23.2",
+    "vuefire": "^2.2.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
