--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-html2canvas": "0.0.4",
     "vue-router": "^3.1.5",
     "vue-sortable": "^0.1.3",
+    "vue-toasted": "^1.1.28",
     "vuedraggable": "^2.23.2",
     "vuefire": "^2.2.2",
     "vuetify": "^2.2.11",
